--- a/Kvasir_SEG_preprocess.ipynb
+++ b/Kvasir_SEG_preprocess.ipynb
@@ -59,14 +59,20 @@
         "def default_augment_seg(input_image, input_mask):\n",
         "    \n",
         "    # Thay đổi độ sáng, độ tương phản, độ bão hòa và màu sắc. \n",
+        "    # Độ sáng\n",
         "    input_image = tf.image.random_brightness(input_image, 0.1)\n",
+        "    # Độ tương phản\n",
         "    input_image = tf.image.random_contrast(input_image, 0.9, 1.1)\n",
+        "    # Độ bão hòa\n",
         "    input_image = tf.image.random_saturation(input_image, 0.9, 1.1)\n",
+        "    # Màu hue\n",
         "    input_image = tf.image.random_hue(input_image, 0.01)\n",
         "    # Lật hình ảnh ngẫu nhiên với xác suất 50%\n",
+        "    # Lật ngang\n",
         "    if tf.random.uniform(()) > 0.5:\n",
         "        input_image = tf.image.flip_left_right(input_image)\n",
         "        input_mask = tf.image.flip_left_right(input_mask)\n",
+        "    # Lật dọc\n",
         "    if tf.random.uniform(()) > 0.5:\n",
         "        input_image = tf.image.flip_up_down(input_image)\n",
         "        input_mask = tf.image.flip_up_down(input_mask)\n",
@@ -90,7 +96,7 @@
         "            raise ValueError(\"Image extension not supported\")\n",
         "\n",
         "        img = tf.image.resize(img, target_size)\n",
-        "\n",
+        "        # Trả về kết quả là hình ảnh có kích thước target_size\n",
         "        return img\n",
         "    \n",
         "    # Tiền xử lý đối với dữ liệu mask  \n",
@@ -146,7 +152,7 @@
         "# Xây dựng dataset\n",
         "def build_dataset(paths, labels=None, bsize=32, cache=True,\n",
         "                  decode_fn=None, augment_fn=None,\n",
-        "                  augment=True, augmentAdvSeg=False, shuffle=1024,\n",
+        "                  augment=True, shuffle=1024,\n",
         "                  cache_dir=\"\"):\n",
         "    if cache_dir != \"\" and cache is True:\n",
         "        os.makedirs(cache_dir, exist_ok=True)\n",
@@ -158,15 +164,19 @@
         "        augment_fn = build_augmenter(labels is not None)\n",
         "\n",
         "    AUTO = tf.data.experimental.AUTOTUNE\n",
+        "    # Tạo slice từ đường dẫn và label \n",
         "    slices = paths if labels is None else (paths, labels)\n",
-        "\n",
         "    dset = tf.data.Dataset.from_tensor_slices(slices)\n",
+        "    # Map dữ liệu với dữ liệu đã được tiền xử lý\n",
         "    dset = dset.map(decode_fn, num_parallel_calls=AUTO)\n",
+        "    # Tạo bộ dữ liệu đệm \n",
         "    dset = dset.cache(cache_dir) if cache else dset\n",
+        "    # Data augmentation\n",
         "    dset = dset.map(augment_fn, num_parallel_calls=AUTO) if augment else dset\n",
+        "    # Trộn dữ liệu với shuffle size là shuffle\n",
         "    dset = dset.shuffle(shuffle) if shuffle else dset\n",
+        "    # Tạo batch với batch_size = bsize\n",
         "    dset = dset.batch(bsize)\n",
-        "    dset = dset.map(BatchAdvAugmentSeg, num_parallel_calls=AUTO) if augmentAdvSeg else dset\n",
         "    dset = dset.prefetch(AUTO)\n",
         "\n",
         "    return dset"
@@ -192,6 +202,7 @@
         "    Y_train = [Y_path + x for x in Y_full]\n",
         "\n",
         "    test_decoder = build_decoder(with_labels=True, target_size=(img_size, img_size), ext='jpg', segment=True, ext2='jpg')\n",
+        "    # Tạo dataset\n",
         "    test_dataset = build_dataset(X_train, Y_train, bsize=BATCH_SIZE, decode_fn=test_decoder,\n",
         "                                augmentAdv=False, augment=False, augmentAdvSeg=False, shuffle = None)\n",
         "    return test_dataset, len(X_train)"
